[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/dialogBox.gd" type="Script" id=2]
[ext_resource path="res://resource/bd/bd_dialog_game.tres" type="Resource" id=3]
[ext_resource path="res://assets/Ui/brassy_frame.png" type="Texture" id=4]
[ext_resource path="res://assets/Fontes/letters_for_learners/Letters for Learners.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/Fontes/city_burn/cityburn-Â®.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=3]
size = 25
extra_spacing_top = 2
extra_spacing_bottom = 2
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=1]
LinkButton/colors/font_color = Color( 1, 1, 1, 1 )
LinkButton/colors/font_color_focus = Color( 1, 1, 1, 1 )
LinkButton/colors/font_color_hover = Color( 0.647059, 0, 0, 1 )
LinkButton/colors/font_color_pressed = Color( 1, 1, 1, 1 )
LinkButton/constants/underline_spacing = 2
LinkButton/fonts/font = SubResource( 3 )
LinkButton/styles/focus = null

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=11]
Button/styles/disabled = SubResource( 6 )
Button/styles/focus = SubResource( 7 )
Button/styles/hover = SubResource( 8 )
Button/styles/normal = SubResource( 9 )
Button/styles/pressed = SubResource( 10 )

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 6 )

[node name="dialogBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
script = ExtResource( 2 )
bd_game = ExtResource( 3 )

[node name="color_rect" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -227.0
theme = SubResource( 2 )
texture = ExtResource( 4 )
expand = true

[node name="name" type="Label" parent="."]
margin_left = 96.0
margin_top = 400.0
margin_right = 189.0
margin_bottom = 437.0
custom_colors/font_color = Color( 0.768627, 0.364706, 0.364706, 1 )
custom_colors/font_outline_modulate = Color( 0.439216, 0.439216, 0.439216, 1 )
custom_fonts/font = SubResource( 4 )
text = "TESTE"
align = 1
valign = 1

[node name="question" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 97.0
margin_top = -162.0
margin_right = -108.0
margin_bottom = -131.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "Teste de perguntas"
align = 3
autowrap = true

[node name="choices" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 105.0
margin_top = -98.0
margin_right = -104.0
margin_bottom = -32.0
alignment = 1

[node name="Label1" type="Label" parent="choices"]
margin_right = 815.0
margin_bottom = 31.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Escolha 1
"
valign = 1
autowrap = true

[node name="Label2" type="Label" parent="choices"]
margin_top = 35.0
margin_right = 815.0
margin_bottom = 66.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Escolha 2
"

[node name="walk" type="Timer" parent="."]
wait_time = 1.7

[node name="wait" type="Timer" parent="."]
wait_time = 0.8

[node name="exit" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -54.0
margin_bottom = 28.0
theme = SubResource( 11 )
custom_colors/font_color = Color( 1, 1, 1, 0.392157 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Sair"

[connection signal="timeout" from="walk" to="." method="_on_walk_timeout"]
[connection signal="timeout" from="wait" to="." method="_on_wait_timeout"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
